# RUST-SIMPLE-IMAGEBOARD-4

./: Cargo.toml  README.md
src/: main.rs
static/: script.js  style.css
