[package]
name = "chess_board"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-multipart = "0.4.0" # For handling multipart forms
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
sled = "0.34.7"
serde_json = "1.0.133"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
image = "0.24.6" # For image processing
futures-util = "0.3.31" # For stream processing
uuid = { version = "1.3.0", features = ["v4"] } # For unique filename generation
html-escape = "0.2" # Corrected crate name for HTML escaping
mime_guess = "2.0" # For MIME type detection
